--- a/ClassroomManager/ClassroomManager/ClassroomManager.csproj
+++ b/ClassroomManager/ClassroomManager/ClassroomManager.csproj
@@ -8,6 +8,7 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
