--- a/ClassroomManager/ClassroomManager/ClassroomManager.csproj
+++ b/ClassroomManager/ClassroomManager/ClassroomManager.csproj
@@ -21,4 +21,8 @@
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20180124132510_ChangeToDateTime.Designer.cs" />
+    <Compile Remove="Migrations\20180124132510_ChangeToDateTime.cs" />
+  </ItemGroup>
 </Project>
